# plasmapy_sphinx

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: check_install.yml  documentation.yml  mint-release.yml  publish-to-pypi.yml
docs/: common_links.rst  conf.py  index.rst
docs/api_static/: plasmapy_sphinx.ext.autodoc.rst  plasmapy_sphinx.ext.automodsumm.rst  plasmapy_sphinx.ext.css.rst  plasmapy_sphinx.ext.directives.rst  plasmapy_sphinx.ext.rst  plasmapy_sphinx.theme.rst
docs/first_steps/: configure.rst  install.rst
plasmapy_sphinx/: __init__.py  utils.py
plasmapy_sphinx/autodoc/: __init__.py  automodapi.py
plasmapy_sphinx/automodsumm/: __init__.py  core.py  generate.py
plasmapy_sphinx/directives/: __init__.py
plasmapy_sphinx/ext/: __init__.py  autodoc.py  automodsumm.py  css.py  directives.py
plasmapy_sphinx/theme/: __init__.py  breadcrumbs.html  footer.html  layout.html  theme.conf  versions.html
plasmapy_sphinx/theme/static/css/: override_version_badge.css  plasmapy.css
requirements/: build.txt  docs.txt  install.txt  tests.txt
